# emailClassification

./: Pipfile  README.md  pyproject.toml  setup.py
