[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-classification"
version = "0.1.0"  # This can be updated from version.py during build
description = "This is an email classification repository, a classic machine learning project to filter spam emails."
authors = [
    { name = "Data Crew", email = "data.crew.de@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    # Add your runtime dependencies here
]

[tool.setuptools]
include-package-data = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]  # Specify the test directory

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "twine",
    "pandas",
    "scikit-learn"
]
